--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -55,7 +55,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'}, 'hello': 'world'}\n"
+     ]
+    }
+   ],
    "source": [
     "force = Document({ 'F' : 'ma'}, 'force', 'equation', '1234')\n",
     "doc.add_dependency(force)\n"
@@ -65,7 +73,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': 'eccbd5ef42db4406b2714c371b1433c8'}, 'F': 'ma'}\n"
+     ]
+    }
+   ],
    "source": [
     "gas = Document({ 'PV': 'nRT' }, 'gas', 'equation', '1234')\n",
     "force.add_dependency(gas)"
@@ -84,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "'a9a7f6659b0e4c7383bd5baaf868f5f5'"
+       "'133a184a6a524811a8fee7b5aff9cbd9'"
       ]
      },
      "execution_count": 7,
@@ -111,7 +127,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'},\n",
+       " '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -148,7 +164,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'},\n",
+       " '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -169,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x11c008ac0>}"
+       "{'force': <ndi.document.Document at 0x117b8af40>}"
       ]
      },
      "execution_count": 11,
@@ -196,7 +212,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x11c008ac0>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x117b8af40>},\n",
        " 'hello': 'world'}"
       ]
      },
@@ -224,7 +240,7 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': '1c74f74490b4478f87513d4bb75cff64'},\n",
+       " '_dependencies': {'gas': 'eccbd5ef42db4406b2714c371b1433c8'},\n",
        " 'F': 'ma'}"
       ]
      },
@@ -245,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x11c0082b0>}"
+       "{'gas': <ndi.document.Document at 0x117bb3b80>}"
       ]
      },
      "execution_count": 14,
@@ -293,15 +309,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11c04d9d0>,\n",
-       " <ndi.document.Document at 0x11c04dc10>,\n",
-       " <ndi.document.Document at 0x11c04da00>,\n",
-       " <ndi.document.Document at 0x11c04db50>,\n",
-       " <ndi.document.Document at 0x11c04daf0>,\n",
-       " <ndi.document.Document at 0x11c04dd60>,\n",
-       " <ndi.document.Document at 0x11c04dca0>,\n",
-       " <ndi.document.Document at 0x11c04deb0>,\n",
-       " <ndi.document.Document at 0x11c04df10>]"
+       "[<ndi.document.Document at 0x117bd9ac0>,\n",
+       " <ndi.document.Document at 0x117bd9c70>,\n",
+       " <ndi.document.Document at 0x117bd99a0>,\n",
+       " <ndi.document.Document at 0x117bd9bb0>,\n",
+       " <ndi.document.Document at 0x117bd9b50>,\n",
+       " <ndi.document.Document at 0x117bd9dc0>]"
       ]
      },
      "execution_count": 16,
@@ -331,13 +344,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '639a274a43184915b5e538114402ae04'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'equation', 'type': 'gas', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'equation', 'type': 'force', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '475cbad1fef24e72b369eae48aea6ba4'}, 'F': 'ma'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '5ec2b3303f1444dbb713bd2d991555b9'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'equation', 'type': 'gas', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'equation', 'type': 'force', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'equation': '63d1df70787c401396e9e9c275dba71e'}, 'F': 'ma'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '4b4fb292c9d047f6ba831b3c6ea68829'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '47b56e817866442d9059241adf993db0'}, 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
+      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': '5e7abeca034c4154a4f6e5c9428fe98e'}, 'F': 'ma'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'}, 'hello': 'world'}\n",
       "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n"
      ]
     }
