--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -131,7 +131,8 @@
    "outputs": [],
    "source": [
     "with doc.binary.write_stream() as ws:\n",
-    "    for i in [4,7,1,23,2,434,2.]"
+    "    for i in [3.425,4.34,5345,.453,542.,45]:\n",
+    "        ws.write(i)"
    ]
   },
   {
@@ -143,8 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  8.  9. 10. 11. 12. 13. 14. 15. 16.\n",
-      " 17. 18. 19.]\n"
+      "[3.425e+00 4.340e+00 5.345e+03 4.530e-01 5.420e+02 4.500e+01]\n"
      ]
     }
    ],
