fix change-requests (!41)

--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete_by_id(force.id)"
+    "db.delete_by_id(force.id, force=True)"
    ]
   },
   {
